--- a/debt project.ipynb
+++ b/debt project.ipynb
@@ -2,42 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09b4a6a9",
-   "metadata": {},
-   "source": [
-    "Сергей, привет!\n",
-    "\n",
-    "Меня зовут Щетинина Софья, я буду проверять твой проект :)\n",
-    "\n",
-    "Мы в Практикуме общаемся на \"ты\", но если тебе некомфортно - дай знать, и мы перейдем на \"вы\".\n",
-    "\n",
-    "Моя цель - не критиковать твою работу, а помогать тебе на пути освоения новой профессии.\n",
-    "\n",
-    "Я буду помечать свои комментарии разными цветами:\n",
-    "\n",
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера:</b> Здесь все сделано хорошо. </div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b> Некритичное замечание или рекомендация: исправлять это не обязательно, но будет полезно для твоего развития. </div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>❌ Комментарий ревьюера:</b> Ошибка. Это нужно исправить, иначе проект не будет принят.\n",
-    "</div>\n",
-    "\n",
-    "Пожалуйста, помечай тоже цветом свои исправления и ответы на мои комментарии.\n",
-    "\n",
-    "Это поможет мне быстрее сделать ревью твоего проекта.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Комментарий студента:</b> \n",
-    "Например, так.\n",
-    "\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e93357e9",
    "metadata": {
     "deletable": false,
@@ -49,13 +13,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fd2d83da",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b> Хоть проект и начинается с заданий с автоматической проверкой, рекомендую делать небольшое вступление с описанием данных, целей и планов исследования. Это поможет собрать все воедино и облегчит твою работу над выводами в конце. </div>\n",
-    "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Описание данных:</b> \n",
     "\n",
@@ -93,29 +55,6 @@
     "2. Произвести предобработку данных.\n",
     "3. Расчитать ключевые показатели по требуемым группам заемщиков.\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19d3d8d3",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера v.2:</b> Отлично! Я бы еще в пункте 3 указала, какие зависимости мы рассматриваем. </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4fedccff",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "827c20bf"
-   },
-   "source": [
-    "Во второй части проекта вы выполните шаги 3 и 4. Их вручную проверит ревьюер.\n",
-    "Чтобы вам не пришлось писать код заново для шагов 1 и 2, мы добавили авторские решения в ячейки с кодом. \n",
-    "\n"
    ]
   },
   {
@@ -1466,6 +1405,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c72d4a31",
    "metadata": {
@@ -1476,35 +1416,7 @@
     "**Вывод:** \n",
     "Люди без детей имеют минимальный процент задолженности перед банком.\n",
     "Среди должников с детьми, люди с 3я детьми имеют минимальный процент задолженности, остальные примерно равны.\n",
-    "Количество людей в каждой из групп сильно отличается, что может влиять на релевантность выборки. Например: людей с 5ю детьми в данной выборке всего 9.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Комментарий студента:</b> \n",
-    "\n",
-    "Таблицу обновил, но не понял, как сделать через сводную, если мы говорим о pivot_table()\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "175c11f4",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера v.2:</b> Через сводную можно сделать так:\n",
-    "        \n",
-    "    data.pivot_table(index = ['children'], values = 'debt', aggfunc = ['count', 'mean'])        \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1f72fbd",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b>  Отличный вывод, верное замечание про размеры выборок. Для подкрепления этой ремарки можно было вывести в сводной таблице количество заемщиков рядом с процентом задолженности.</div>"
+    "Количество людей в каждой из групп сильно отличается, что может влиять на релевантность выборки. Например: людей с 5ю детьми в данной выборке всего 9."
    ]
   },
   {
@@ -1562,15 +1474,6 @@
     "Вдовцы и вдовы имею самый низкий процент задолженности.\n",
     "Женатые и в разводе имеют примерно одинаковый процент задолженности и находится на среднем уровне.\n",
     "Незамужние и люди в гражданском браке имеют самый высокий процент задолженности."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b32bc095",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера:</b> Все правильно. И обобщаем - люди, состоящие или состоявшие в прошлом в официальном браке, являются более надежными заемщиками. </div>"
    ]
   },
   {
@@ -1679,6 +1582,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29f4ca43",
    "metadata": {
@@ -1688,33 +1592,7 @@
    "source": [
     "**Вывод:** \n",
     "Явные отличия у катигорий дохода E и D. Люди из категории E (с самым низким доходом) имеют самый большой процент задолженности, а из категории D (с доходом ниже среднего), самый низкий.\n",
-    "В остальных категориях закономерность не прослеживается.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Комментарий студента:</b> \n",
-    "\n",
-    "Таблицу обновил, но не понял, как сделать через сводную, если мы говорим о pivot_table()\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90684f3f",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера v.2:</b> Выше указала, как лаконично сделать        \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "999bb08e",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b> Здесь явно тоже нужна поправка на размеры выборок. Было бы отлично добавить эту метрику в таблицу. </div>"
+    "В остальных категориях закономерность не прослеживается."
    ]
   },
   {
@@ -1773,15 +1651,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6dde2b",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера:</b> Верно. Вероятно, цели кредита определяют портрет типичного заемщика. </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7ea8d146",
    "metadata": {
     "deletable": false,
@@ -1793,6 +1662,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4b0b416",
    "metadata": {
@@ -1802,32 +1672,7 @@
    "source": [
     "*Ответ:* \n",
     "Пропуски присутствуют в колонках days_employed и total_income. Эти данные могут отсутствовать если у человека income_type является 'пенсионер', 'студент', 'в декрете' или 'безработный'. Также, люди могут быть с неофициальным доходом, самозанятами или ИП.\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Комментарий студента:</b> \n",
-    "\n",
-    "Ошибка может быть технологического характера, когда система неверно обрабатывает информацию людей данных категорий. Стоит провести проверку техническим специалистом для исключения данной возможности.\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37ac12d8",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера v.2:</b> Все супер        \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f289c379",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b> А еще могут быть люди с неофициальной работой или самозанятые и ИП. Критично тут - написать о возможной технической ошибке, данные могут пропадать при процессинге. </div>"
+    "Ошибка может быть технологического характера, когда система неверно обрабатывает информацию людей данных категорий. Стоит провести проверку техническим специалистом для исключения данной возможности."
    ]
   },
   {
@@ -1856,15 +1701,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c18aca4",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера:</b> Все так 👍 </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "0add2e1d",
    "metadata": {
     "deletable": false,
@@ -1876,6 +1712,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b3c1091",
    "metadata": {
@@ -1905,59 +1742,8 @@
     "Процент задолженности: 6 - 7, но количество людей в данной группе примерно в 3 раза меньше чем в группе 'C'.\n",
     "\n",
     "Люди, берущие кредит на недвижимость и свадьбы, имеют процент задолженности являются более надежными заемщиками. \n",
-    "Процент задолженности: 7.3 - 7.9\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Комментарий студента:</b> \n",
-    "Обновил выводы\n",
-    "\n",
-    "</div>"
+    "Процент задолженности: 7.3 - 7.9"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6c93db2",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера v.2:</b> Выводы на высоте! Очень удобны для ознакомления с результатами, это ценится везде. Работа принята, удачи в дальнейшем прохождении курса!     \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a23f6cc7",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>⚠️ Комментарий ревьюера:</b> Описание верное, но не хватает структуры - абзацей, чтоб разделять зависимости, которые мы исследовали, и численных доказательств этих выводов - сколько процентов и где, это тоже важно. </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d311434c",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b> ✔️ Комментарий ревьюера:</b> Общее впечатление:\n",
-    "\n",
-    "Отличная работа, очень лакончичные и четко прописанные выводы, приятно изучать.\n",
-    "\n",
-    "Отправляю тебе работу доделать 2 момента:\n",
-    "- Вместо метода groupby() использовать сводные таблицы и разместить в них количество заемщиков рядом с процентом задолженности\n",
-    "- Структурировать выводы\n",
-    "\n",
-    "Буду рада ответить на твои вопросы в комментариях!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc5ec84b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
