--- a/6. user behavior/user behavior project.ipynb
+++ b/6. user behavior/user behavior project.ipynb
@@ -4,45 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/waving-hand.png\" align=left width=44, heigth=44>\n",
-    "<div class=\"alert alert-info\">\n",
-    "<b> Комментарий ревьюера</b>\n",
-    "\n",
-    "\n",
-    "Привет, Сергей! Давай знакомиться! Меня зовут Дмитрий Махортов, и я буду проверять твой проект. Сразу предлагаю общение на «ты» 🙂, но если тебе это не комфортно, то дай знать, и мы перейдем на «вы». \n",
-    "\n",
-    "Моя основная цель — не указать на совершенные тобою ошибки, а поделиться своим опытом и помочь тебе погрузиться в увлекательный мир работы с данными и вырасти в крепкого профи. Это отдаленная цель. А ближайшая - сделать твою работу еще лучше )).\n",
-    "   \n",
-    "    \n",
-    "Все ключевые этапы в работе выполнены, и я вижу что с проектом ты справшяешься. Есть моменты, которые нужно доработать, но я уверен, у тебя все получится.\n",
-    "        \n",
-    "Расскажу как обычно проходит проверка:    \n",
-    "Бывают моменты, которые требуют пристального внимания. Комментарии по ним выделены <span style='background-color:#F7B3A4'> красным цветом </span> и обозначены значком 🛑. После их доработки проект будет принят.  🙂\n",
-    " \n",
-    "<span style='background-color:#B7EBA7'> Зеленым цветом </span> и значком ✅ отмечены удачные и элегантные решения, на которые можно опираться в будущих проектах. Или советы «со звездочкой», которые помогут тебе в будущем.\n",
-    "\n",
-    "<span style='background-color:#F9EDA6'>Жёлтым цветом </span> и значком ⚠️ выделено то, что в следующий раз можно сделать по-другому. Ты можешь учесть эти комментарии при выполнении будущих заданий или доработать проект сейчас (однако это не обязательно).\n",
-    "\n",
-    "Давай работать над проектом в диалоге: **если ты что-то меняешь в проекте по моим рекомендациям — пиши об этом**. Выбери для своих комментариев какой-то заметный цвет, так мне будет легче отследить изменения. Пожалуйста, **не перемещай, не изменяй и не удаляй мои комментарии**. Всё это поможет выполнить повторную проверку твоего проекта оперативнее. \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "    <font size=\"3\"><b>образец комментария студента</b></font>\n",
-    "   \n",
-    "Можешь использовать этот комментарий. Просто удали этот текст и вместо него напиши свой 🙂\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Рекомендация тарифов"
    ]
   },
@@ -109,15 +70,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\">\n",
-    "Отлично, все нужные библиотеки импортированы в начале ноутбука.Это хорошая практика.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Загружаем файл"
    ]
   },
@@ -128,7 +80,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    df = pd.read_csv('/datasets/users_behavior.csv')\n",
+    "    df = pd.read_csv('users_behavior.csv')\n",
     "except:\n",
     "    df = pd.read_csv('https://code.s3.yandex.net/datasets/users_behavior.csv')"
    ]
@@ -320,15 +272,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\">\n",
-    "Данные загружены и исследованы.</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Разбейте данные на выборки"
    ]
   },
@@ -499,60 +442,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Stop_sign.png/240px-Stop_sign.png\" align=left width=35, heigth=35>\n",
-    "<div class=\"alert alert-danger\">\n",
-    "<b>v2</b>    \n",
-    "Долго не мог понять, почему у тебя получены такие хорошие результаты, особенно на тестировании.  И причина в том, что разделение на выборки произведено с ошибкой.\n",
-    "    \n",
-    "Данных у нас всего 3214, а размеры выборок 2410 + 1607 + 1607, т.е. очевидно, что выборки пересекаются. А значит мы имеем утечки из валидации и теста в обучающую выборку.  Т.е. многие данные, на которых мы тестируем модель уже увидела в процессе обучения.  \n",
-    "    \n",
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "<b>v2</b> Исправил:) Прошу прощение за невнимарельность</div>\n",
-    "    \n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v3</b> исправлено </div>    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\">\n",
-    "Выборки получены корректно</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\">\n",
-    "Совет:  обрати внимание на аргумент stratify функции train_test_split. Стратификация особенно важна, когда у нас мало данных и возможен дисбаланс классов в обучении / валидации / тесте.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/b/ba/Warning_sign_4.0.png\" align=left width=44, heigth=33>\n",
-    "<div class=\"alert alert-warning\">\n",
-    "Рекомендую явно вывести размеры получившихся выборок (с использованием .shape и print), это поможет быстро оценить корректность разделения на выборки.\n",
-    "    \n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v2</b> исправлено </div>    \n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -575,17 +466,6 @@
     "print(target_train.shape)\n",
     "print(target_test.shape)\n",
     "print(target_val.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "Добавил:)\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -642,46 +522,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Stop_sign.png/240px-Stop_sign.png\" align=left width=35, heigth=35>\n",
-    "<div class=\"alert alert-danger\">\n",
-    "Мы решаем задачу классификации, а модель DecisionTreeRegressor предназначена для решения задачи регрессии. Пожалуйста используй правильную модель.\n",
-    "\n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v2</b> исправлено </div>\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "Поправил:)\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\"><b>v2</b>\n",
-    "Дерево решений исследовано  корректно:\n",
-    "    \n",
-    " - исследовано 3 значения гиперпараметров\n",
-    " - модель обучена на обучающем наборе\n",
-    " - получена оценка качества на валидационном наборе\n",
-    " - перебор гиперпараметров осуществляется в цикле\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Случайный лес"
    ]
   },
@@ -717,105 +557,6 @@
     "\n",
     "print(\"Accuracy наилучшей модели на валидационной выборке:\", best_forest_result, \n",
     "      \"Количество деревьев:\", best_forest_est, \"Максимальная глубина:\", best_forest_depth)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\"><b>v2</b>\n",
-    "Случайный лес исследован корректно:\n",
-    "    \n",
-    " - исследовано 5х10  комбинаций значений гиперпараметров\n",
-    " - модель обучена на обучающем наборе\n",
-    " - получена оценка качества на валидационном наборе\n",
-    " - перебор гиперпараметров осуществляется в цикле\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Stop_sign.png/240px-Stop_sign.png\" align=left width=35, heigth=35>\n",
-    "<div class=\"alert alert-danger\"><b>v2</b>\n",
-    "Обрати внимание, что ты выводишь не лушую найденную глубину (best_forest_depth), а последнее значение глубины которое мы рассмотрели в цикле (forest_depth).\n",
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "<b>v2</b> Исправил:) Прошу прощение за невнимарельность 2.0</div>\n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v3</b> исправлено </div>    \n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/b/ba/Warning_sign_4.0.png\" align=left width=44, heigth=33>\n",
-    "<div class=\"alert alert-warning\"><b>v2</b>\n",
-    "Старайся не делать такие длинные строки. Стандарт PEP8 регулирует длину строки 79 символов. Придерживаться такого очень сложно, но лучше хотя-бы вмещать в экран, чтобы не приходилось использовать scroll.\n",
-    "    \n",
-    "    \n",
-    "А еще  если сомневаешься, как отформатировать правильно - всегда можно найти какой-нибудь оналйн-форматтер, например этот\n",
-    "    \n",
-    "  https://extendsclass.com/python-formatter.html\n",
-    "    \n",
-    "    \n",
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "<b>v2</b> Поправил:)</div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Stop_sign.png/240px-Stop_sign.png\" align=left width=35, heigth=35>\n",
-    "<div class=\"alert alert-danger\">\n",
-    "Мы решаем задачу классификации, а модель DecisionTreeRegressor предназначена для решения задачи регрессии. Пожалуйста используй правильную модель.\n",
-    "\n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v2</b> исправлено </div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "Поправил:)\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Stop_sign.png/240px-Stop_sign.png\" align=left width=35, heigth=35>\n",
-    "<div class=\"alert alert-danger\">\n",
-    "Закончен важный этап: исследованы модели, найдены оптимальные гиперпараметры для каждой. Нужно зафиксировать результат: выбрать лучшую модель (включая гиперпараметры)  и описать свое решение в выводах.\n",
-    "\n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v2</b> исправлено </div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "Добавил:)\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -860,61 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\"><b>v2</b>\n",
-    "Молодец: \n",
-    "    \n",
-    "  - выбрана лучшая модель\n",
-    "  - тестирование произведено корректно \n",
-    "  - достигнута хорошая точность на тестовой выборке\n",
-    "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\"><b>v2</b>\n",
-    "Совет:  Сейчас, когда гиперпараметры подобраны и валидационная выборка нам не нужна, мы можем обучить модель на большой выборке (обучающая + валидационная), а тестирование новой модели произвести уже на тестовой выборке.\n",
-    "    \n",
-    "Объединить выборки можно с помощью pd.concat\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## (бонус) Проверьте модели на адекватность"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/b/ba/Warning_sign_4.0.png\" align=left width=44, heigth=33>\n",
-    "<div class=\"alert alert-warning\">\n",
-    "Ты провел интересное исследование, но проверка на адекватность это чуть чуть другое.    \n",
-    "    \n",
-    "В основе проверки на адекватность лежит очень простая идея. Модель считается адекватной, если способна \"побить\" любой \"наивный\" алгоритм, например предсказывающий случайный или постояный ответ. \n",
-    "\n",
-    "Для нашего проекта самую высокую точность дает  \"наивный\" алгоритм, всегда предсказывающий самый популярный ответ (у нас это 0). Проверить точность такого подхода можно вручную или используя DummyClassifier.\n",
-    "    \n",
-    "<div class=\"alert alert-success\">\n",
-    "<b>v2</b> исправлено </div>    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "Добавил:)\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -1263,7 +950,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1245: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/sergejvorobev/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
@@ -1366,15 +1053,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://emojigraph.org/media/apple/check-mark-button_2705.png\" align=left width=33, heigth=33>\n",
-    "<div class=\"alert alert-success\">\n",
-    " 👍 </div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Чек-лист готовности проекта"
    ]
   },
@@ -1400,56 +1078,6 @@
     "    - [x] Написаны выводы по результатам исследования\n",
     "- [x] Выполнено задание 3: Проведено тестирование\n",
     "- [x] Удалось достичь accuracy не меньше 0.75"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/waving-hand.png\" align=left width=44, heigth=44>\n",
-    "<div class=\"alert alert-info\">\n",
-    "<b> Заключительный комментарий</b>\n",
-    "\n",
-    "К сожалению ты использовал модели регрессии вместо моделей классификации. Пожалуйста исправь ошибку, после чего я смогу закончить ревью.\n",
-    "    \n",
-    "Со своей стороны постарался проверить и прокомментировать по максимуму.    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/waving-hand.png\" align=left width=44, heigth=44>\n",
-    "<div class=\"alert alert-info\">\n",
-    "<b> Заключительный комментарий v2</b>\n",
-    "\n",
-    "Продолжаем ревью.\n",
-    "\n",
-    "В целом проект уже почти готов, но нужно исправить две ошибки\n",
-    "    \n",
-    " - Во первых выборки, на которые ты разделил наш датасет  не должны пересекаться\n",
-    " - А во вторых, вывододя информацию о случайном лесе нужно вывести лучшую глубину, а не последнее значение глубины, которое мы исследовали в цикле.\n",
-    "    \n",
-    "<div class=\"alert\" style=\"background-color:#ead7f7;color:#8737bf\">\n",
-    "   \n",
-    "<b>v2</b> Все предварительные выводы и финальный вывод поправил. Заметил, что и в модель для тестирования не добавил лучшие гиперпараметры, сейчас все корректрно.</div>\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"http://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/waving-hand.png\" align=left width=44, heigth=44>\n",
-    "<div class=\"alert alert-info\">\n",
-    "<b> Заключительный комментарий v3</b>\n",
-    "\n",
-    "На этот раз все ОК.    \n",
-    "    \n",
-    "Проект принят. Поздравляю и желаю дальнейших успехов!\n",
-    "</div>"
    ]
   },
   {
@@ -3912,7 +3540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
