real estate project updated

--- a/3. real estate/real estate.ipynb
+++ b/3. real estate/real estate.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Исследование объявлений о продаже квартир\n",
     "\n",
-    "В вашем распоряжении данные сервиса Яндекс.Недвижимость — архив объявлений о продаже квартир в Санкт-Петербурге и соседних населённых пунктов за несколько лет. Нужно научиться определять рыночную стоимость объектов недвижимости. Ваша задача — установить параметры. Это позволит построить автоматизированную систему: она отследит аномалии и мошенническую деятельность. \n",
+    "В нашем распоряжении данные сервиса Недвижимости — архив объявлений за несколько лет о продаже квартир в Санкт-Петербурге и соседних населённых пунктах.\n",
+    "Наша задача — выполнить предобработку данных и изучить их, чтобы найти интересные особенности и зависимости, которые существуют на рынке недвижимости.\n",
     "\n",
-    "По каждой квартире на продажу доступны два вида данных. Первые вписаны пользователем, вторые — получены автоматически на основе картографических данных. Например, расстояние до центра, аэропорта, ближайшего парка и водоёма. "
+    "О каждой квартире в базе содержится два типа данных: добавленные пользователем и картографические. Например, к первому типу относятся площадь квартиры, её этаж и количество балконов, ко второму — расстояния до центра города, аэропорта и ближайшего парка. "
    ]
   },
   {
@@ -71,25 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Откройте файл с данными и изучите общую информацию. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Открываем файл"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "### Открываем файл"
    ]
   },
   {
@@ -98,9 +81,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import sys\n",
     "\n",
     "pd.set_option('display.float_format', lambda x: '%.3f' % x)"
    ]
@@ -112,9 +97,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    data = pd.read_csv('/datasets/real_estate_data.csv', sep='\\t')\n",
+    "    data = pd.read_csv('...', sep='\\t')\n",
     "except:\n",
-    "    data = pd.read_csv('https://code.s3.yandex.net/datasets/real_estate_data.csv', sep='\\t')"
+    "    data = pd.read_csv('...', sep='\\t')"
    ]
   },
   {
@@ -1865,7 +1850,6 @@
     }
    ],
    "source": [
-    "# check\n",
     "data[data['rooms'] == 3].query('total_area < 201 and last_price < 25_000_000').plot(kind='scatter',\n",
     "        y='living_area' , x='total_area', alpha=0.5, subplots=True, figsize=(15,8), c = 'black', s = 4)\n",
     "plt.title('Диаграмма рассеяния — Общая площадь — Жилая');"
@@ -1911,7 +1895,6 @@
     }
    ],
    "source": [
-    "# check\n",
     "data.clear_locality_name.nunique()"
    ]
   },
@@ -1998,7 +1981,6 @@
     }
    ],
    "source": [
-    "# check\n",
     "data.clear_locality_name.unique()"
    ]
   },
@@ -2102,10 +2084,6 @@
     "data = data.query('22 < total_area < 380')\n",
     "data = data.query('561384 <= last_price <= 36000000')\n",
     "data = data.query('2.4 <= ceiling_height <= 5')\n",
-    "#data = data.query('days_exposition <= 1371 | days_exposition.isnull()')\n",
-    "#data = data.query('10 <= living_area <= 215 | living_area.isnull()')\n",
-    "#data = data.query('3.8 <= kitchen_area <= 60 | kitchen_area.isnull()')\n",
-    "#data = data.query('1 <= floor <= 26')\n",
     "data = data.query('2 <= floors_total <= 35')"
    ]
   },
