movie project updated

--- a/4. movies/rf_movies.ipynb
+++ b/4. movies/rf_movies.ipynb
@@ -14,7 +14,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Заказчик этого исследования — Министерство культуры Российской Федерации, нужно изучить рынок российского кинопроката и выявить текущие тренды. Уделите внимание фильмам, которые получили государственную поддержку."
+    "Заказчик этого исследования — Министерство культуры Российской Федерации. \n",
+    "\n",
+    "Нам нужно изучить рынок российского кинопроката и выявить текущие тренды. Уделим внимание фильмам, которые получили государственную поддержку. Попробуем ответить на вопрос, насколько такие фильмы интересны зрителю. \n",
+    "\n",
+    "Мы будете работать с данными, опубликованными на портале открытых данных Министерства культуры. Набор данных содержит информацию о прокатных удостоверениях, сборах и государственной поддержке фильмов, а также информацию с сайта КиноПоиск. "
    ]
   },
   {
@@ -28,22 +32,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*       title — название фильма;\n",
-    "* \t\tpuNumber — номер прокатного удостоверения;\n",
-    "* \t\tshow_start_date — дата премьеры фильма;\n",
-    "* \t\ttype — тип фильма;\n",
-    "* \t\tfilm_studio — студия-производитель;\n",
-    "* \t\tproduction_country — страна-производитель;\n",
-    "* \t\tdirector — режиссёр;\n",
-    "* \t\tproducer — продюсер;\n",
-    "* \t\tage_restriction — возрастная категория;\n",
-    "* \t\trefundable_support — объём возвратных средств государственной поддержки;\n",
-    "* \t\tnonrefundable_support — объём невозвратных средств государственной поддержки;\n",
-    "* \t\tfinancing_source — источник государственного финансирования;\n",
-    "* \t\tbudget — общий бюджет фильма;\n",
-    "* \t\tratings — рейтинг фильма на КиноПоиске;\n",
-    "* \t\tgenres — жанр фильма.\n",
-    "* \t\tbox_office — сборы в рублях.\n"
+    "Таблица mkrf_movies содержит информацию из реестра прокатных удостоверений. У одного фильма может быть несколько прокатных удостоверений. \n",
+    "\n",
+    "* title — название фильма;\n",
+    "* puNumber — номер прокатного удостоверения;\n",
+    "* show_start_date — дата премьеры фильма;\n",
+    "* type — тип фильма;\n",
+    "* film_studio — студия-производитель;\n",
+    "* production_country — страна-производитель;\n",
+    "* director — режиссёр;\n",
+    "* producer — продюсер;\n",
+    "* age_restriction — возрастная категория;\n",
+    "* refundable_support — объём возвратных средств государственной поддержки;\n",
+    "* nonrefundable_support — объём невозвратных средств государственной поддержки;\n",
+    "* financing_source — источник государственного финансирования;\n",
+    "budget — общий бюджет фильма;\n",
+    "* ratings — рейтинг фильма на КиноПоиске;\n",
+    "* genres — жанр фильма.\n",
+    "Обратим внимание, что столбец budget уже включает в себя полный объём государственной поддержки. Данные в этом столбце указаны только для тех фильмов, которые получили государственную поддержку. \n",
+    "\n",
+    "Таблица mkrf_shows содержит сведения о показах фильмов в российских кинотеатрах.\n",
+    "* puNumber — номер прокатного удостоверения;\n",
+    "* box_office — сборы в рублях.\n"
    ]
   },
   {
@@ -53,7 +63,7 @@
     "id": "3bSlkCsbgFyL"
    },
    "source": [
-    "### Шаг 1. Откройте файлы с данными и объедините их в один датафрейм. "
+    "### Открываем файлы с данными и объедините их в один датафрейм. "
    ]
   },
   {
@@ -678,18 +688,7 @@
     "id": "KLDGpPG0gFyM"
    },
    "source": [
-    "### Шаг 2. Предобработка данных"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ssWwKXsxgFyO"
-   },
-   "source": [
-    "#### Шаг 2.1. Проверьте типы данных\n",
-    "\n",
-    "- Проверьте типы данных в датафрейме и преобразуйте их там, где это необходимо."
+    "### Предобработка данных"
    ]
   },
   {
@@ -705,17 +704,6 @@
     "#Приводим рейтинг к единиму формату и фереводим в тип float\n",
     "data['ratings'] = data['ratings'].str.replace('%', '')\n",
     "data['ratings'] = data['ratings'].astype('float').apply(lambda x: x/10 if x>10 else x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "i0MOLbF-gFyP"
-   },
-   "source": [
-    "#### Шаг 2.2. Изучите пропуски в датафрейме\n",
-    "\n",
-    "- Объясните, почему заполнили пропуски определённым образом или почему не стали этого делать."
    ]
   },
   {
@@ -825,16 +813,6 @@
    ],
    "source": [
     "data.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "4c6k1t9ygFyQ"
-   },
-   "source": [
-    "#### Шаг 2.3. Изучите дубликаты в датафрейме\n",
-    "- Проверьте, есть ли в данных дубликаты. Опишите причины, которые могли повлиять на появление дублей."
    ]
   },
   {
@@ -1967,16 +1945,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "52fOPrEBgFyQ"
-   },
-   "source": [
-    "#### Шаг 2.4. Изучите категориальные значения"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
@@ -2038,19 +2006,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Eu6oWp2CgFyS"
-   },
-   "source": [
-    "#### Шаг 2.5. Добавьте новые столбцы\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "7GgW-UpAgFyS"
@@ -2085,15 +2040,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "1FsCXHwdgFyU"
-   },
-   "source": [
-    "- Посчитайте, какую долю от общего бюджета фильма составляет государственная поддержка."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
@@ -2111,16 +2057,7 @@
     "id": "6t4EukPLgFyV"
    },
    "source": [
-    "### Шаг 3. Проведите исследовательский анализ данных\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "vAH8WCzugFyV"
-   },
-   "source": [
-    "- Посмотрите, сколько фильмов выходило в прокат каждый год. Обратите внимание, что данные о прокате в кинотеатрах известны не для всех фильмов. Посчитайте, какую долю составляют фильмы с указанной информацией о прокате в кинотеатрах."
+    "### Исследовательский анализ данных\n"
    ]
   },
   {
@@ -2179,15 +2116,6 @@
    "metadata": {},
    "source": [
     "Имеется большое количество пропущенных значений в столбце сборов фильма. Почто 60%."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "BEOdcIrIgFyW"
-   },
-   "source": [
-    "- Изучите, как менялась динамика проката по годам. В каком году сумма сборов была минимальной? А максимальной?"
    ]
   },
   {
@@ -2358,15 +2286,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "G-7qS-N-gFyY"
-   },
-   "source": [
-    "- С помощью сводной таблицы посчитайте среднюю и медианную сумму сборов для каждого года."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
@@ -2530,15 +2449,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "Ok89WFwJgFyZ"
-   },
-   "source": [
-    "- Определите, влияет ли возрастное ограничение аудитории («6+», «12+», «16+», «18+» и т. д.) на сборы фильма в прокате в период с 2015 по 2019 год? Фильмы с каким возрастным ограничением собрали больше всего денег в прокате? Меняется ли картина в зависимости от года? Если да, предположите, с чем это может быть связано."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
@@ -2580,9 +2490,7 @@
     "id": "l_Kg6Ku4gFya"
    },
    "source": [
-    "### Шаг 4. Исследуйте фильмы, которые получили государственную поддержку\n",
-    "\n",
-    "На этом этапе нет конкретных инструкций и заданий — поищите интересные закономерности в данных. Посмотрите, сколько выделяют средств на поддержку кино. Проверьте, хорошо ли окупаются такие фильмы, какой у них рейтинг."
+    "### Исследуем фильмы, которые получили государственную поддержку"
    ]
   },
   {
@@ -3124,7 +3032,7 @@
     "id": "V2gYwMcPgFyd"
    },
    "source": [
-    "### Шаг 5. Напишите общий вывод"
+    "### Общий вывод"
    ]
   },
   {
