user behavior project updated

--- a/6. user behavior/user behavior project.ipynb
+++ b/6. user behavior/user behavior project.ipynb
@@ -11,16 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В вашем распоряжении данные о поведении клиентов, которые уже перешли на эти тарифы (из проекта курса «Статистический анализ данных»). Нужно построить модель для задачи классификации, которая выберет подходящий тариф. Предобработка данных не понадобится — вы её уже сделали.\n",
+    "# Описание проекта\n",
+    "Оператор мобильной связи выяснил: многие клиенты пользуются архивными тарифами. Они хотят построить систему, способную проанализировать поведение клиентов и предложить пользователям новый тариф: «Смарт» или «Ультра».\n",
     "\n",
-    "Постройте модель с максимально большим значением *accuracy*. Чтобы сдать проект успешно, нужно довести долю правильных ответов по крайней мере до 0.75. Проверьте *accuracy* на тестовой выборке самостоятельно."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Откройте и изучите файл"
+    "В нашем распоряжении данные о поведении клиентов, которые уже перешли на эти тарифы. Нужно построить модель для задачи классификации, которая выберет подходящий тариф.\n",
+    "\n",
+    "Найдем модель с максимально большим значением accuracy."
    ]
   },
   {
@@ -37,13 +33,6 @@
     "- messages — количество sms-сообщений,\n",
     "- mb_used — израсходованный интернет-трафик в Мб,\n",
     "-  is_ultra — каким тарифом пользовался в течение месяца («Ультра» — 1, «Смарт» — 0)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Импортируем требуемые для работы библиотеки"
    ]
   },
   {
@@ -82,7 +71,7 @@
     "try:\n",
     "    df = pd.read_csv('users_behavior.csv')\n",
     "except:\n",
-    "    df = pd.read_csv('https://code.s3.yandex.net/datasets/users_behavior.csv')"
+    "    df = pd.read_csv('...')"
    ]
   },
   {
@@ -266,13 +255,6 @@
    ],
    "source": [
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Разбейте данные на выборки"
    ]
   },
   {
@@ -479,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Исследуйте модели"
+    "## Исследуем модели"
    ]
   },
   {
@@ -573,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Проверьте модель на тестовой выборке"
+    "## Проверяем модель на тестовой выборке"
    ]
   },
   {
@@ -601,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (бонус) Проверьте модели на адекватность"
+    "## Проверяем модели на адекватность"
    ]
   },
   {
@@ -1048,42 +1030,6 @@
     "- Модель показывает ~52% точности при поиске положительных значений.\n",
     "- Модель находит лишь ~52% всех положительных значений. Зная это, мы можем понять, что предсказания по количеству переходов на новый тариф будут ниже, чем фактические показатели."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Чек-лист готовности проекта"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [x] Jupyter Notebook открыт\n",
-    "- [x] Весь код исполняется без ошибок\n",
-    "- [x] Ячейки с кодом расположены в порядке исполнения\n",
-    "- [x] Выполнено задание 1: данные загружены и изучены\n",
-    "- [x] Выполнено задание 2: данные разбиты на три выборки\n",
-    "- [x] Выполнено задание 3: проведено исследование моделей\n",
-    "    - [x] Рассмотрено больше одной модели\n",
-    "    - [x] Рассмотрено хотя бы 3 значения гипепараметров для какой-нибудь модели\n",
-    "    - [x] Написаны выводы по результатам исследования\n",
-    "- [x] Выполнено задание 3: Проведено тестирование\n",
-    "- [x] Удалось достичь accuracy не меньше 0.75"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
