--- a/10. music genre prediction Kaggle competition/music genre prediction.ipynb
+++ b/10. music genre prediction Kaggle competition/music genre prediction.ipynb
@@ -983,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Тестируем pipeline"
+    "### Pipeline"
    ]
   },
   {
@@ -1024,7 +1024,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GridSearchCV"
+    "### RandomizedSearchCV fitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Создание модели CatBoostClassifier с поддержкой GPU\n",
+    "# clf = CatBoostClassifier(\n",
+    "#     task_type='GPU',\n",
+    "#     eval_metric='TotalF1'\n",
+    "# )\n",
+    "\n",
+    "# # Определение Pipeline с шагами предобработки и моделью\n",
+    "# pipeline = Pipeline(steps=[\n",
+    "#     ('col_trans', col_trans),\n",
+    "#     ('model', clf)\n",
+    "# ])\n",
+    "\n",
+    "# # Определение параметров для подбора гиперпараметров\n",
+    "# params = {\n",
+    "#     'model__depth': [4, 6, 8, 10],\n",
+    "#     'model__learning_rate': [0.01, 0.05, 0.1, 0.2],\n",
+    "#     'model__l2_leaf_reg': [1, 3, 5, 7],\n",
+    "#     'model__iterations': [100, 200, 300, 500],\n",
+    "#     'model__border_count': [5, 10, 20],\n",
+    "#     'model__thread_count': [4],\n",
+    "#     'model__early_stopping_rounds': [10],\n",
+    "#     'model__bootstrap_type': ['Bayesian', 'Bernoulli', 'MVS'],\n",
+    "#     'model__random_strength': [0.01, 0.1, 1],\n",
+    "#     'model__max_ctr_complexity': [1, 2, 3]\n",
+    "# }\n",
+    "\n",
+    "# # Создание RandomizedSearchCV\n",
+    "# grid = RandomizedSearchCV(pipeline,\n",
+    "#                           params,\n",
+    "#                           n_iter=50,\n",
+    "#                           cv=3,\n",
+    "#                           verbose=5,\n",
+    "#                           random_state=42,\n",
+    "#                           scoring='f1_micro',\n",
+    "#                           n_jobs=None)\n",
+    "\n",
+    "# # Подгонка модели\n",
+    "# grid.fit(X_train, y_train)\n",
+    "\n",
+    "# # Вывод лучших параметров и результатов\n",
+    "# print(\"Best Parameters:\", grid.best_params_)\n",
+    "# print(\"Best F1 Micro Score:\", grid.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Best Parameters: {'model__thread_count': 4, 'model__random_strength': 1, 'model__max_ctr_complexity': 1, 'model__learning_rate': 0.1, 'model__l2_leaf_reg': 1, 'model__iterations': 300, 'model__early_stopping_rounds': 10, 'model__depth': 4, 'model__border_count': 10, 'model__bootstrap_type': 'Bayesian'}\n",
+    "Best F1 Micro Score: 0.4591481507101745"
    ]
   },
   {
@@ -1297,7 +1355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PipeLine"
+    "### PipeLine prediction"
    ]
   },
   {
